2012-03-09  Emil A Eklund  <eae@chromium.org>

        Add roundedPoint to HitTestResult and change platform code to use it
        https://bugs.webkit.org/show_bug.cgi?id=80715

        Reviewed by James Robinson.

        Change ports to use roundedPoint to avoid exposing subpixel types to
        platform code.

        * WebProcess/WebPage/WebContextMenu.cpp:
        (WebKit::WebContextMenu::show):

2012-03-09  Alexey Proskuryakov  <ap@apple.com>

        [Mac] Pass sandbox profiles through preprocessor
        https://bugs.webkit.org/show_bug.cgi?id=80651

        Reviewed by Mark Rowe.

        * DerivedSources.make: Preprocess sandbox profiles.

        * PluginProcess/mac/com.apple.WebKit.PluginProcess.sb: Removed.
        * PluginProcess/mac/com.apple.WebKit.PluginProcess.sb.in: Copied from Source/WebKit2/PluginProcess/mac/com.apple.WebKit.PluginProcess.sb.
        * WebProcess/com.apple.WebProcess.sb: Removed.
        * WebProcess/com.apple.WebProcess.sb.in: Copied from Source/WebKit2/WebProcess/com.apple.WebProcess.sb.
        Renamed to avoid make finding the wrong original in default paths.

        * WebKit2.xcodeproj/project.pbxproj: Copy preprocessed files to Resources, not originals.
        Also, changed DerivedSources target to use BaseTarget.xcconfig to have correct include paths.

2012-03-09  Jon Lee  <jonlee@apple.com>

        Add support for ENABLE(LEGACY_NOTIFICATIONS)
        https://bugs.webkit.org/show_bug.cgi?id=80497

        Reviewed by Adam Barth.

        Prep for b80472: Update API for Web Notifications
        * Configurations/FeatureDefines.xcconfig:

2012-03-09  Ashod Nakashian  <ashodnakashian@yahoo.com>

        Bash scripts should support LF endings only
        https://bugs.webkit.org/show_bug.cgi?id=79509

        Reviewed by David Kilzer.

        * win/build-generated-files.sh: Added properties svn:executable and svn:eol-style.

2012-03-08  Enrica Casucci  <enrica@apple.com>
